styles/styles.css
#container{
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 200px 64px 5fr;
    font-family: Arial, Helvetica, sans-serif;
}
img{
    width: 2rem;
}
h4{
    font-weight: 700;
    font-size: 1.25rem;
}
h5{
    font-weight: 600;
}
a{
    color: white;
    text-decoration: none;
}

:root{
    --sidebar-col: #01172f;
    --header-col: #1c3144;
    --title-col: #548687;
    --accent-col: #b0413e;
    --card-col: #CAC4CE;
}
input{
    border-radius: 8px;
    border: none;
    width: 32rem;
    height: 1.5rem;
    margin-left: 12px;
}



/*SIDEBAR*/
#sidebar-container{
    background-color: var(--sidebar-col);
    grid-row: 1/6;
    grid-column: 1/2;
    min-height: 100vh;
    min-width: 350px;
    color: white;
    position: relative;
}
#sidebar-contents{
    position:fixed;
    margin: 32px;
    font-family: Arial, Helvetica, sans-serif;
}
#sidebar-contents h1{
    font-size: 2rem;
    font-weight: bold;
}
#sidebar-contents ul{
    font-size: 1.25rem;
    margin-top: 64px;
}

#sidebar-container li{
    margin-top: 32px;
}





/*HEADER*/
#header-container{
    background-color: var(--header-col);
    grid-row: 1/2;
    grid-column: 2/3;
    color: white;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(2, 1fr);
    box-shadow: 0 -5px 3px -3px black, 0 5px 3px -3px rgb(146, 146, 146);
    position: sticky;
    top: -6.5rem;
}
#searchbar img{
    padding: .75rem;
}

#searchbar{
    margin-left: 32px;
    grid-row: auto;
    grid-column: 1/5;
    display: flex;
    align-items: center;
}
#searchbar label{
    border:0;
}

#profile{
    grid-row: auto;
    grid-column: 5/7;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 16px;
    margin-right: 32px;
}
#profile img{
    height: 2rem;
    width: auto;

    font-size: larger;
}
#profile p{
    font-size: 1.25rem;

}


#social-buttons{
    grid-row: 2;
    grid-column: 6/7;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 32px;
    margin-right: 32px;
    height: auto;
}
#social-buttons .button{
    border: none;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#greeting{
    grid-row: 2;
    grid-column: 1/4;
    display: flex;
    align-items: center;
    margin-left: 32px;
    height: auto;
}
#greeting img{
    margin-right: 1rem;
    width: 3.5rem;
}



/*TITLE*/
#title-container{
    display: grid;
    grid-template-columns: 2fr 1fr;
}
#content-title-one{
    margin-left: 32px;
}
#content-title-two{
    grid-column: 2/3;
}

.content-title{
    align-self: end;
    font-size: 1.5rem;
    font-weight: bold;
}





/*CONTENT*/
#content-container{
    display: grid;
    grid-template-columns: 2fr 1fr;
    
}

#article-container{
    padding: 32px;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(128px, 1fr));
    gap: 32px;
}

.card-container{
    display: flex;
    justify-content: center;
    align-items: center;
}
.card{
    background-color: var(--card-col);
    border-left: 8px solid var(--accent-col);
    border-radius: 8px;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 16px;

}
.card-btn{
    gap: 16px;
    display: flex;
    overflow: hidden;
    margin: 0px 0px 8px 16px;
}
.card-info{
    height: 70%;
    max-width: 80%;
    margin: 16px 0px 0px 16px;
    overflow: hidden;
} 
p{
    margin-top: 6px;
}
#aside-container{
    display: grid;
    grid-template-rows: 1fr 64px 1fr;
    padding-bottom: 18px;
}

.aside-card{
    background-color: var(--card-col);
    border-left: 8px solid var(--title-col);
    height: 90%;
    border-radius: 8px;
    margin-top: 32px;
    margin-right: 32px;
    min-width: 250px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 1px;
}

.aside-two-info,
.aside-one-info{
    padding: 16px;
}

.aside-two-info{
    gap: 8px;
}

.aside-data-misc{
    display: flex;
    align-items: center;
}

